# jerbo

./: .gitignore  LICENSE  Makefile  README.md  go.mod  jerbo.go
gomar/: gomar.go
gomar/display/: APL386.WHERE  Apl385.WHERE
gomar/emu/: coco1.go  coco13.go  coco3.go  emu.go  trace.go
other/: Makefile  version.cmoc  version.lwtools
other/cmoc/: AUTHORS  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
other/cmoc/doc/: Makefile.in  cmoc-manual.markdown
other/cmoc/macros/: Makefile.in
other/cmoc/src/: ASMText.cpp  ASMText.h  BinaryOpExpr.cpp  BinaryOpExpr.h  CastExpr.cpp  ClassDef.cpp  ClassDef.h  ConditionalExpr.cpp  Declaration.cpp  Declaration.h  FunctionCallExpr.cpp  FunctionCallExpr.h  FunctionDef.cpp  FunctionDef.h  JumpStmt.cpp  Makefile.am  Makefile.in  RealConstantExpr.cpp  Scope.cpp  Scope.h  TranslationUnit.cpp  TranslationUnit.h  Tree.cpp  Tree.h  TreeSequence.cpp  TreeSequence.h  TypeDesc.cpp  TypeDesc.h  TypeManager.cpp  UnaryOpExpr.cpp  VariableExpr.cpp  lexer.cc  lexer.ll  main.cpp  parser.cc  parser.hh  parser.yy  test-bad-programs.pl  test-program-output.pl  util.cpp  (+1 more)
other/cmoc/src/float/: Makefile.am  Makefile.in  binOpSingleSingle.asm
other/cmoc/src/stdlib/: Makefile.am  Makefile.in  cmoc.h  coco.h  crt.asm  delay.asm  disk.c  isdigit.c  printf.asm  readline.asm  sprintf.asm  sqrt16.c
other/cmoc/src/usim-0.91-cmoc/: Makefile.in
v2/os9defs/: os9defs.go
v2/undisk/: defs.go  undisk.go
